<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/share"
        android:title="Compartir" />
    <item
        android:id="@+id/delete"
        android:title="Borrar" />
    <item
        android:id="@+id/change_color"
        android:title="Cambiar De Color" />
</menu>