<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20pt"
            android:text="Registro"
            android:textColor="@color/white"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/register_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginVertical="2pt"
            android:text="Email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginVertical="5pt"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register_passwod_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginVertical="2pt"
            android:text="Contraseña"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginVertical="5pt"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:text="Ha ocurrido un error de procesamiento, por favor
vuelva a intentar el registro más tarde."
            android:textColor="#ff5733" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginTop="10pt"
            android:background="#FF0000"
            android:minHeight="55dp"
            android:text="Registrarse"
            app:backgroundTint="#FF0000" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20pt"
            android:layout_marginTop="10pt"
            android:background="#FF0000"
            android:minHeight="55dp"
            android:text="Inicia Sesión"
            app:backgroundTint="#FF0000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>